--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -194,12 +194,13 @@ content:
     region: content
     settings:
       entity_browser: media_directories_modal
-      field_widget_display: label
+      field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
       field_widget_replace: false
       open: true
-      field_widget_display_settings: {  }
+      field_widget_display_settings:
+        view_mode: small
       selection_mode: selection_append
     third_party_settings: {  }
   field_meta_tags:
@@ -216,12 +217,13 @@ content:
     region: content
     settings:
       entity_browser: media_directories_modal
-      field_widget_display: label
+      field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
       field_widget_replace: false
       open: true
-      field_widget_display_settings: {  }
+      field_widget_display_settings:
+        view_mode: small
       selection_mode: selection_append
     third_party_settings: {  }
   field_news_inspiration:
