--- a/config/sync/core.entity_form_display.paragraph.top_image.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.top_image.default.yml
@@ -3,21 +3,30 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.media_directories_modal
     - field.field.paragraph.top_image.field_background
     - paragraphs.paragraphs_type.top_image
   module:
-    - media_library
+    - entity_browser
 id: paragraph.top_image.default
 targetEntityType: paragraph
 bundle: top_image
 mode: default
 content:
   field_background:
-    type: media_library_widget
+    type: entity_browser_entity_reference
     weight: 0
     region: content
     settings:
-      media_types: {  }
+      entity_browser: media_directories_modal
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: false
+      open: true
+      field_widget_display_settings:
+        view_mode: small
+      selection_mode: selection_append
     third_party_settings: {  }
 hidden:
   created: true
