--- a/config/sync/core.entity_form_display.node.blog_post.default.yml
+++ b/config/sync/core.entity_form_display.node.blog_post.default.yml
@@ -8,15 +8,18 @@ dependencies:
     - field.field.node.blog_post.field_article_type
     - field.field.node.blog_post.field_description
     - field.field.node.blog_post.field_list_media
+    - field.field.node.blog_post.field_list_media_anonymous
     - field.field.node.blog_post.field_meta_tags
     - field.field.node.blog_post.field_section_bg_graphics
     - field.field.node.blog_post.field_section_bg_graphics_pos
+    - image.style.thumbnail
     - node.type.blog_post
   module:
     - allowed_formats
     - content_moderation
     - entity_browser
     - field_group
+    - image
     - metatag
     - path
     - text
@@ -24,6 +27,7 @@ third_party_settings:
   field_group:
     group_listevisning:
       children:
+        - field_list_media_anonymous
         - field_list_media
         - field_description
       label: Listevisning
@@ -63,7 +67,7 @@ content:
     third_party_settings: {  }
   field_description:
     type: string_textarea
-    weight: 19
+    weight: 28
     region: content
     settings:
       rows: 5
@@ -71,7 +75,7 @@ content:
     third_party_settings: {  }
   field_list_media:
     type: entity_browser_entity_reference
-    weight: 18
+    weight: 27
     region: content
     settings:
       entity_browser: media_directories_modal
@@ -82,6 +86,14 @@ content:
       open: true
       field_widget_display_settings: {  }
       selection_mode: selection_append
+    third_party_settings: {  }
+  field_list_media_anonymous:
+    type: image_image
+    weight: 26
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
