--- a/config/sync/core.entity_view_display.node.blog_post.default.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.default.yml
@@ -7,12 +7,13 @@ dependencies:
     - field.field.node.blog_post.field_article_type
     - field.field.node.blog_post.field_description
     - field.field.node.blog_post.field_list_media
+    - field.field.node.blog_post.field_list_media_anonymous
     - field.field.node.blog_post.field_meta_tags
     - field.field.node.blog_post.field_section_bg_graphics
     - field.field.node.blog_post.field_section_bg_graphics_pos
     - node.type.blog_post
   module:
-    - datetime
+    - image
     - metatag
     - text
     - user
@@ -34,6 +35,17 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 3
+    region: content
+  field_list_media_anonymous:
+    type: image
+    label: above
+    settings:
+      image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
+    third_party_settings: {  }
+    weight: 4
     region: content
   field_meta_tags:
     type: metatag_empty_formatter
