--- a/config/sync/core.entity_view_display.node.blog_post.teaser.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.blog_post.field_article_type
     - field.field.node.blog_post.field_description
     - field.field.node.blog_post.field_list_media
+    - field.field.node.blog_post.field_list_media_anonymous
     - field.field.node.blog_post.field_meta_tags
     - field.field.node.blog_post.field_section_bg_graphics
     - field.field.node.blog_post.field_section_bg_graphics_pos
@@ -37,6 +38,7 @@ hidden:
   field_article_type: true
   field_description: true
   field_list_media: true
+  field_list_media_anonymous: true
   field_meta_tags: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
