--- a/config/sync/field.field.node.blog_post.field_list_media.yml
+++ b/config/sync/field.field.node.blog_post.field_list_media.yml
@@ -10,7 +10,7 @@ id: node.blog_post.field_list_media
 field_name: field_list_media
 entity_type: node
 bundle: blog_post
-label: 'Liste media'
+label: 'Liste media (webmasters)'
 description: ''
 required: true
 translatable: true
