--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -36,6 +36,7 @@ permissions:
   - 'view field_article_image_migrated'
   - 'view field_article_related'
   - 'view field_colophon'
+  - 'view field_list_media'
   - 'view field_list_media_anonymous'
   - 'view media'
   - 'view own field_article_image'
@@ -43,4 +44,5 @@ permissions:
   - 'view own field_article_image_migrated'
   - 'view own field_article_related'
   - 'view own field_colophon'
+  - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
