--- a/config/sync/field.field.block_content.basic.body.yml
+++ b/config/sync/field.field.block_content.basic.body.yml
@@ -6,7 +6,13 @@ dependencies:
     - block_content.type.basic
     - field.storage.block_content.body
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    allowed_formats:
+      - basic_html
+      - full_html
 _core:
   default_config_hash: foetbaMhlB6uLc2bn-PESvaPkbuDWj0MEjpQVwQiP-o
 id: block_content.basic.body
