--- a/config/sync/field.storage.block_content.field_text.yml
+++ b/config/sync/field.storage.block_content.field_text.yml
@@ -4,7 +4,11 @@ status: true
 dependencies:
   module:
     - block_content
+    - field_permissions
     - text
+third_party_settings:
+  field_permissions:
+    permission_type: public
 _core:
   default_config_hash: bGBMeQMj6bKavEp4HjFmx_mvywI_5y1HiZKcMH4HHyw
 id: block_content.field_text
