SIS2-499: Enable Full HTML on body of Blog

--- a/config/sync/field.field.node.news.body.yml
+++ b/config/sync/field.field.node.news.body.yml
@@ -10,7 +10,9 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    allowed_formats: {  }
+    allowed_formats:
+      - full_html
+      - basic_html
 _core:
   default_config_hash: KgVkxLl_K3E3lvN6CEoWQIDT0V8J4Mv-fVYrAIc7-FE
 id: node.news.body
