--- a/config/sync/field.field.node.dot_on_map.body.yml
+++ b/config/sync/field.field.node.dot_on_map.body.yml
@@ -10,7 +10,9 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    allowed_formats: {  }
+    allowed_formats:
+      - full_html
+      - basic_html
 id: node.dot_on_map.body
 field_name: body
 entity_type: node
