--- a/config/sync/user.role.organization.yml
+++ b/config/sync/user.role.organization.yml
@@ -28,6 +28,7 @@ permissions:
   - 'create document media'
   - 'create dot_on_map content'
   - 'create field_colophon'
+  - 'create field_list_media_anonymous'
   - 'create image media'
   - 'create remote_video media'
   - 'create video media'
@@ -41,6 +42,7 @@ permissions:
   - 'edit own article content'
   - 'edit own document media'
   - 'edit own field_colophon'
+  - 'edit own field_list_media_anonymous'
   - 'edit own image media'
   - 'edit own remote_video media'
   - 'edit own video media'
