--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "drupal/entity_usage": "^2.0-beta3",
         "drupal/field_group": "^3.0",
         "drupal/field_permissions": "^1.2",
+        "drupal/file_delete": "^2.0",
         "drupal/focal_point": "^2.0@alpha",
         "drupal/honeypot": "^2.1",
         "drupal/hreflang": "^1.0",
