--- a/config/sync/field.field.node.dot_on_map.field_list_media_anonymous.yml
+++ b/config/sync/field.field.node.dot_on_map.field_list_media_anonymous.yml
@@ -19,8 +19,8 @@ field_name: field_list_media_anonymous
 entity_type: node
 bundle: dot_on_map
 label: 'Liste media'
-description: 'Et lille billede, der vises på interne søgeresultater og andre lister. Det kan være det samme billede som artiklens billede.'
-required: false
+description: 'Et lille billede, der vises på interne søgeresultater og andre lister.'
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
