--- a/config/sync/field.field.node.dot_on_map.lon.yml
+++ b/config/sync/field.field.node.dot_on_map.lon.yml
@@ -9,7 +9,7 @@ id: node.dot_on_map.lon
 field_name: lon
 entity_type: node
 bundle: dot_on_map
-label: Længde
+label: Længdegrad
 description: 'Bruges hvis der ikke er nogen adresse. Eksempelværdi: 56.1131237.'
 required: false
 translatable: true
