SIS2-525, SIS2-526, SIS2-533, SIS2-475, SIS2-520, SIS2-521, SIS2-530

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ webroot/sites/simpletest
 # Ignore SimpleTest multi-site environment.
 # simpletest
 
+# Ignore configurations that are ignored by config-ignore module
+config/sync/smtp.settings.yml
+
 # Since we are using drupal-scaffold the files are create on composer-update
 # so there is no reason to save them in version-control.
 .editorconfig
