--- a/config/sync/config_ignore.settings.yml
+++ b/config/sync/config_ignore.settings.yml
@@ -4,3 +4,5 @@ langcode: da
 ignored_config_entities:
   - sis_articles.settings
   - smtp.settings
+  - 'system.site:page.403'
+  - 'system.site:page.404'
