--- a/config/sync/field.field.node.article.field_list_media_anonymous.yml
+++ b/config/sync/field.field.node.article.field_list_media_anonymous.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: article
 label: 'Liste media'
 description: 'Et lille billede, der vises på interne søgeresultater og andre lister. Det kan være det samme billede som artiklens billede.'
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
