--- a/config/sync/user.role.organization.yml
+++ b/config/sync/user.role.organization.yml
@@ -27,6 +27,7 @@ permissions:
   - 'create article content'
   - 'create document media'
   - 'create dot_on_map content'
+  - 'create field_article_image_anonymous'
   - 'create field_colophon'
   - 'create field_list_media_anonymous'
   - 'create image media'
@@ -41,6 +42,7 @@ permissions:
   - 'delete own video media'
   - 'edit own article content'
   - 'edit own document media'
+  - 'edit own field_article_image_anonymous'
   - 'edit own field_colophon'
   - 'edit own field_list_media_anonymous'
   - 'edit own image media'
