--- a/config/sync/image.style.article.yml
+++ b/config/sync/image.style.article.yml
@@ -8,9 +8,17 @@ effects:
   c47afc4d-6e41-43d5-8262-e6b88c4595b8:
     uuid: c47afc4d-6e41-43d5-8262-e6b88c4595b8
     id: image_scale
-    weight: 2
+    weight: -9
     data:
       width: 900
       height: 506
-      upscale: false
+      upscale: true
+  fef5fa25-d502-4edc-9c7e-d0910f16f0bd:
+    uuid: fef5fa25-d502-4edc-9c7e-d0910f16f0bd
+    id: image_scale_and_crop
+    weight: -10
+    data:
+      width: 900
+      height: 506
+      anchor: center-center
 pipeline: __default__
