--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -16,7 +16,7 @@ dependencies:
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
     - field.field.node.news.field_news_image
-    - field.field.node.news.field_news_inspiration
+    - field.field.node.news.field_related_terms
     - field.field.node.news.field_section_bg_graphics
     - field.field.node.news.field_section_bg_graphics_pos
     - node.type.news
@@ -101,14 +101,13 @@ content:
     third_party_settings: {  }
     weight: 6
     region: content
-  field_news_inspiration:
-    type: entity_reference_entity_view
-    label: hidden
+  field_related_terms:
+    type: entity_reference_label
+    label: above
     settings:
-      view_mode: simple_list
-      link: false
+      link: true
     third_party_settings: {  }
-    weight: 4
+    weight: 9
     region: content
   links:
     settings: {  }
