--- a/config/sync/core.entity_view_display.node.news.inline_navigation.yml
+++ b/config/sync/core.entity_view_display.node.news.inline_navigation.yml
@@ -17,7 +17,7 @@ dependencies:
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
     - field.field.node.news.field_news_image
-    - field.field.node.news.field_news_inspiration
+    - field.field.node.news.field_related_terms
     - field.field.node.news.field_section_bg_graphics
     - field.field.node.news.field_section_bg_graphics_pos
     - node.type.news
@@ -71,7 +71,7 @@ hidden:
   field_list_date: true
   field_meta_tags: true
   field_news_image: true
-  field_news_inspiration: true
+  field_related_terms: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
   langcode: true
