--- a/config/sync/core.entity_view_display.node.news.slideshow.yml
+++ b/config/sync/core.entity_view_display.node.news.slideshow.yml
@@ -17,7 +17,7 @@ dependencies:
     - field.field.node.news.field_list_media
     - field.field.node.news.field_meta_tags
     - field.field.node.news.field_news_image
-    - field.field.node.news.field_news_inspiration
+    - field.field.node.news.field_related_terms
     - field.field.node.news.field_section_bg_graphics
     - field.field.node.news.field_section_bg_graphics_pos
     - node.type.news
@@ -94,15 +94,6 @@ content:
     third_party_settings: {  }
     weight: 6
     region: content
-  field_news_inspiration:
-    type: entity_reference_entity_view
-    label: hidden
-    settings:
-      view_mode: simple_list
-      link: false
-    third_party_settings: {  }
-    weight: 4
-    region: content
   links:
     settings: {  }
     third_party_settings: {  }
@@ -117,6 +108,7 @@ hidden:
   field_hide_breadcrumb: true
   field_hide_title: true
   field_list_media: true
+  field_related_terms: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
   langcode: true
