--- a/config/sync/core.entity_form_display.paragraph.overview_element.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.overview_element.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.overview_element.field_article
     - field.field.paragraph.overview_element.field_link_list_headline
     - field.field.paragraph.overview_element.field_link_list_title
     - field.field.paragraph.overview_element.field_show_link_list
@@ -13,15 +14,17 @@ targetEntityType: paragraph
 bundle: overview_element
 mode: default
 content:
-  field_link_list_headline:
-    type: string_textfield
-    weight: 2
+  field_article:
+    type: entity_reference_autocomplete
+    weight: 0
     region: content
     settings:
+      match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_link_list_title:
+  field_link_list_headline:
     type: string_textfield
     weight: 3
     region: content
@@ -29,16 +32,24 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_link_list_title:
+    type: string_textfield
+    weight: 4
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_show_link_list:
     type: boolean_checkbox
-    weight: 1
+    weight: 2
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_type:
     type: entity_reference_autocomplete
-    weight: 0
+    weight: 1
     region: content
     settings:
       match_operator: CONTAINS
