--- a/config/sync/field.storage.paragraph.field_show_link_list.yml
+++ b/config/sync/field.storage.paragraph.field_show_link_list.yml
@@ -3,7 +3,11 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - paragraphs
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: paragraph.field_show_link_list
 field_name: field_show_link_list
 entity_type: paragraph
